# UGV_Autonomy_ws

./: README.md
src/: lidar.rviz
src/base_controller/: CMakeLists.txt  package.xml
src/base_controller/include/: utils.h
src/base_controller/launch/: manual_ps3.launch  pure_manual.launch  pure_pursuit.launch
src/base_controller/src/: manual_ps3.cpp  pure_manual.cpp  pure_pursuit.cpp  pure_pursuit_pre.cpp
src/cubic_spline/: CMakeLists.txt
src/cubic_spline/include/: spline_rw.h
src/cubic_spline/launch/: create_path.launch  load_path.launch  load_path_orin.launch
src/cubic_spline/paths/: spline_path.csv
src/cubic_spline/src/: load_path_inter.cpp  load_path_orin.cpp  spline_fit_rviz.cpp  spline_fit_rviz_lib.cpp
src/f1tenth_simulator/launch/: simulator.launch  simulator.rviz
src/vesc_system/vesc/vesc_ackermann/config/: vesc.yaml
src/vesc_system/vesc/vesc_ackermann/src/: go_to_goal.cpp
